--- a/03-BookExternalVars/book.yml
+++ b/03-BookExternalVars/book.yml
@@ -1,12 +1,6 @@
 ---
 - name: Install Application
   hosts: apiservers
-  vars:
-    appli_version: v1
-    appli_dir: "/opt/application/{{ appli_version }}"
-    appli_user: kali
-    appli_group: kali
-    appli_dir_exe_mode: 0750
   tasks:
     - name: Create Directory Binaries
       file:
@@ -50,11 +44,11 @@
       block:
         - name: DB Server
           apt:
-            name: postgresql-14
+            name: "{{ db_package}}"
             state: present
         - name: Start DB Auto
           systemd:
-            name: postgresql
+            name: "{{ db_service }}"
             state: started
             enabled: yes
       become: yes
