--- a/04-BookWithRoles/book.yml
+++ b/04-BookWithRoles/book.yml
@@ -2,7 +2,10 @@
 - name: Install Application
   hosts: apiservers
   roles:
+    - common
     - api 
+  tags:
+    - api
   become: yes
   become_method: sudo
 
@@ -10,7 +13,17 @@
 - name: DB Installation
   hosts: dbservers
   roles:
+    - common
+    - db
+  tags:
     - db
   become: yes
   become_method: sudo
 
+
+- name: Learn
+  hosts: apiservers
+  roles:
+    - learn
+  tags:
+    - learn
